[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/UI Elements/Logger/LoggerInterface.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menu/Network_setup/Network_setup.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/BaseFontSize20.tres" type="DynamicFont" id=3]

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.054902, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -189.0
margin_right = 250.0
margin_bottom = -39.0
rect_pivot_offset = Vector2( -1872, -527 )
custom_fonts/font = ExtResource( 3 )
text = "Host Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_right = 250.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( -1872, -527 )
custom_fonts/font = ExtResource( 3 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Server_ip_address" type="LineEdit" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -450.0
margin_top = 111.0
margin_right = 450.0
margin_bottom = 211.0
custom_fonts/font = ExtResource( 3 )
align = 1
placeholder_text = "Enter IP Address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Logger" parent="CanvasLayer" instance=ExtResource( 1 )]
margin_left = 52.0
margin_top = 96.0
margin_right = 467.0
margin_bottom = 864.0

[node name="Device_ip_address" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Multiplayer_configure/Host_server" to="." method="_on_Host_server_button_up"]
[connection signal="button_up" from="Multiplayer_configure/Join_server" to="." method="_on_Join_server_button_up"]
